--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Common\CommonConstants.cs" />
+    <Compile Include="Common\Encryptor.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
