--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Areas\Admin\Models\LoginModel.cs" />
     <Compile Include="Common\CommonConstants.cs" />
     <Compile Include="Common\Encryptor.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1636,6 +1637,85 @@
     <Content Include="assets\admin\pages\panels-wells.html" />
     <Content Include="assets\admin\pages\tables.html" />
     <Content Include="assets\admin\pages\typography.html" />
+    <Content Include="assets\client\css\boostrap-social.css" />
+    <Content Include="assets\client\css\bootstrap-theme.css" />
+    <Content Include="assets\client\css\bootstrap-theme.min.css" />
+    <Content Include="assets\client\css\bootstrap.css" />
+    <Content Include="assets\client\css\bootstrap.min.css" />
+    <Content Include="assets\client\css\easy-responsive-tabs.css" />
+    <Content Include="assets\client\css\font-awesome.min.css" />
+    <Content Include="assets\client\css\global.css" />
+    <Content Include="assets\client\css\jquery-ui.css" />
+    <Content Include="assets\client\css\slider.css" />
+    <Content Include="assets\client\css\style.css" />
+    <Content Include="assets\client\font\fontawesome-webfont.svg" />
+    <Content Include="assets\client\font\glyphicons-halflings-regular.svg" />
+    <Content Include="assets\client\images\about_img.jpg" />
+    <Content Include="assets\client\images\arrow-next.png" />
+    <Content Include="assets\client\images\arrow-prev.png" />
+    <Content Include="assets\client\images\arrow_up.png" />
+    <Content Include="assets\client\images\compare.png" />
+    <Content Include="assets\client\images\delivery-img1.jpg" />
+    <Content Include="assets\client\images\delivery-img2.jpg" />
+    <Content Include="assets\client\images\delivery-img3.jpg" />
+    <Content Include="assets\client\images\dribbble.png" />
+    <Content Include="assets\client\images\drop_arrow-hover.png" />
+    <Content Include="assets\client\images\drop_arrow.png" />
+    <Content Include="assets\client\images\facebook.png" />
+    <Content Include="assets\client\images\feature-pic1.jpg" />
+    <Content Include="assets\client\images\feature-pic2.jpg" />
+    <Content Include="assets\client\images\feature-pic3.jpg" />
+    <Content Include="assets\client\images\feature-pic4.jpg" />
+    <Content Include="assets\client\images\linkedin.png" />
+    <Content Include="assets\client\images\list-img.png" />
+    <Content Include="assets\client\images\logo.png" />
+    <Content Include="assets\client\images\new-pic1.jpg" />
+    <Content Include="assets\client\images\new-pic2.jpg" />
+    <Content Include="assets\client\images\new-pic3.jpg" />
+    <Content Include="assets\client\images\new-pic4.jpg" />
+    <Content Include="assets\client\images\newsimg1.jpg" />
+    <Content Include="assets\client\images\newsimg2.jpg" />
+    <Content Include="assets\client\images\newsimg3.jpg" />
+    <Content Include="assets\client\images\preview.jpg" />
+    <Content Include="assets\client\images\price-rating.png" />
+    <Content Include="assets\client\images\productslide-1.jpg" />
+    <Content Include="assets\client\images\productslide-2.jpg" />
+    <Content Include="assets\client\images\productslide-3.jpg" />
+    <Content Include="assets\client\images\productslide-4.jpg" />
+    <Content Include="assets\client\images\productslide-5.jpg" />
+    <Content Include="assets\client\images\productslide-6.jpg" />
+    <Content Include="assets\client\images\quality-rating.png" />
+    <Content Include="assets\client\images\search.png" />
+    <Content Include="assets\client\images\skype.png" />
+    <Content Include="assets\client\images\slide-1-image.png" />
+    <Content Include="assets\client\images\slide-2-image.jpg" />
+    <Content Include="assets\client\images\slide-3-image.jpg" />
+    <Content Include="assets\client\images\tag.png" />
+    <Content Include="assets\client\images\thumbnailslide-1.jpg" />
+    <Content Include="assets\client\images\thumbnailslide-2.jpg" />
+    <Content Include="assets\client\images\thumbnailslide-3.jpg" />
+    <Content Include="assets\client\images\thumbnailslide-4.jpg" />
+    <Content Include="assets\client\images\thumbnailslide-5.jpg" />
+    <Content Include="assets\client\images\thumbnailslide-6.jpg" />
+    <Content Include="assets\client\images\twitter.png" />
+    <Content Include="assets\client\images\value-rating.png" />
+    <Content Include="assets\client\images\wishlist.png" />
+    <Content Include="assets\client\js\bootstrap.min.js" />
+    <Content Include="assets\client\js\controller\baseController.js" />
+    <Content Include="assets\client\js\controller\cartController.js" />
+    <Content Include="assets\client\js\controller\contactController.js" />
+    <Content Include="assets\client\js\controller\userController.js" />
+    <Content Include="assets\client\js\easing.js" />
+    <Content Include="assets\client\js\easyResponsiveTabs.js" />
+    <Content Include="assets\client\js\jquery-1.11.3.min.js" />
+    <Content Include="assets\client\js\jquery-1.7.2.min.js" />
+    <Content Include="assets\client\js\jquery-ui.js" />
+    <Content Include="assets\client\js\jquery.accordion.js" />
+    <Content Include="assets\client\js\jquery.easing.js" />
+    <Content Include="assets\client\js\move-top.js" />
+    <Content Include="assets\client\js\script.js" />
+    <Content Include="assets\client\js\slides.min.jquery.js" />
+    <Content Include="assets\client\js\startstop-slider.js" />
     <Content Include="bin\Antlr3.Runtime.dll" />
     <Content Include="bin\Antlr3.Runtime.pdb" />
     <Content Include="bin\EntityFramework.dll" />
@@ -2078,6 +2158,19 @@
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Debug\OnlineShop.csprojResolveAssemblyReference.cache" />
     <Content Include="Areas\Admin\Views\Shared\_Navigation.cshtml" />
+    <Content Include="assets\client\css\bootstrap-theme.css.map" />
+    <Content Include="assets\client\css\bootstrap.css.map" />
+    <Content Include="assets\client\font\Amble-Regular-webfont.ttf" />
+    <Content Include="assets\client\font\fontawesome-webfont.eot" />
+    <Content Include="assets\client\font\fontawesome-webfont.ttf" />
+    <Content Include="assets\client\font\fontawesome-webfont.woff" />
+    <Content Include="assets\client\font\fontawesome-webfont.woff2" />
+    <Content Include="assets\client\font\FontAwesome.otf" />
+    <Content Include="assets\client\font\glyphicons-halflings-regular.eot" />
+    <Content Include="assets\client\font\glyphicons-halflings-regular.ttf" />
+    <Content Include="assets\client\font\glyphicons-halflings-regular.woff" />
+    <Content Include="assets\client\font\glyphicons-halflings-regular.woff2" />
+    <Content Include="assets\client\images\Thumbs.db" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -2100,38 +2193,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\SendCode.cshtml" />
-    <Content Include="Views\Account\VerifyCode.cshtml" />
-    <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
-    <Content Include="Views\Manage\ChangePassword.cshtml" />
-    <Content Include="Views\Manage\Index.cshtml" />
-    <Content Include="Views\Manage\ManageLogins.cshtml" />
-    <Content Include="Views\Manage\SetPassword.cshtml" />
-    <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
-    <Content Include="Views\Shared\Lockout.cshtml" />
-    <Content Include="Views\Shared\_LoginPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Views\Base\" />
-    <Folder Include="assets\client\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
     <Folder Include="obj\Debug\TempPE\" />
