--- a/OnlineShop/OnlineShop/bin/OnlineShop.dll.config
+++ b/OnlineShop/OnlineShop/bin/OnlineShop.dll.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=(localdb)\ProjectsV13;initial catalog=OnlineShop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="OnlineShopDbContext" connectionString="data source=DESKTOP-8R0SJ35;initial catalog=OnlineShop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
