--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -1711,6 +1711,7 @@
     <Content Include="assets\client\js\easyResponsiveTabs.js" />
     <Content Include="assets\client\js\jquery-1.11.3.min.js" />
     <Content Include="assets\client\js\jquery-1.7.2.min.js" />
+    <Content Include="assets\client\js\jquery-3.2.1.min.js" />
     <Content Include="assets\client\js\jquery-ui.js" />
     <Content Include="assets\client\js\jquery.accordion.js" />
     <Content Include="assets\client\js\jquery.easing.js" />
@@ -2173,6 +2174,8 @@
     <Content Include="assets\client\font\glyphicons-halflings-regular.woff" />
     <Content Include="assets\client\font\glyphicons-halflings-regular.woff2" />
     <Content Include="assets\client\images\Thumbs.db" />
+    <Content Include="assets\client\css\bootstrap-theme.min.css.map" />
+    <Content Include="assets\client\css\bootstrap.min.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
