--- a/OnlineShop/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop/OnlineShop/OnlineShop.csproj
@@ -1650,6 +1650,7 @@
     <Content Include="assets\client\css\jquery-ui.css" />
     <Content Include="assets\client\css\slider.css" />
     <Content Include="assets\client\css\style.css" />
+    <Content Include="assets\client\fonts\fontawesome-webfont.svg" />
     <Content Include="assets\client\font\fontawesome-webfont.svg" />
     <Content Include="assets\client\font\glyphicons-halflings-regular.svg" />
     <Content Include="assets\client\images\about_img.jpg" />
@@ -2176,6 +2177,39 @@
     <Content Include="assets\client\images\Thumbs.db" />
     <Content Include="assets\client\css\bootstrap-theme.min.css.map" />
     <Content Include="assets\client\css\bootstrap.min.css.map" />
+    <Content Include="assets\client\less\animated.less" />
+    <Content Include="assets\client\less\bordered-pulled.less" />
+    <Content Include="assets\client\less\core.less" />
+    <Content Include="assets\client\less\fixed-width.less" />
+    <Content Include="assets\client\less\font-awesome.less" />
+    <Content Include="assets\client\less\icons.less" />
+    <Content Include="assets\client\less\larger.less" />
+    <Content Include="assets\client\less\list.less" />
+    <Content Include="assets\client\less\mixins.less" />
+    <Content Include="assets\client\less\path.less" />
+    <Content Include="assets\client\less\rotated-flipped.less" />
+    <Content Include="assets\client\less\screen-reader.less" />
+    <Content Include="assets\client\less\stacked.less" />
+    <Content Include="assets\client\less\variables.less" />
+    <Content Include="assets\client\scss\font-awesome.scss" />
+    <Content Include="assets\client\scss\_animated.scss" />
+    <Content Include="assets\client\scss\_bordered-pulled.scss" />
+    <Content Include="assets\client\scss\_core.scss" />
+    <Content Include="assets\client\scss\_fixed-width.scss" />
+    <Content Include="assets\client\scss\_icons.scss" />
+    <Content Include="assets\client\scss\_larger.scss" />
+    <Content Include="assets\client\scss\_list.scss" />
+    <Content Include="assets\client\scss\_mixins.scss" />
+    <Content Include="assets\client\scss\_path.scss" />
+    <Content Include="assets\client\scss\_rotated-flipped.scss" />
+    <Content Include="assets\client\scss\_screen-reader.scss" />
+    <Content Include="assets\client\scss\_stacked.scss" />
+    <Content Include="assets\client\scss\_variables.scss" />
+    <Content Include="assets\client\fonts\fontawesome-webfont.eot" />
+    <Content Include="assets\client\fonts\fontawesome-webfont.ttf" />
+    <Content Include="assets\client\fonts\fontawesome-webfont.woff" />
+    <Content Include="assets\client\fonts\fontawesome-webfont.woff2" />
+    <Content Include="assets\client\fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
